# beast-websocket-client

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py
.github/workflows/: build.yml  python-format.yml  python-lint.yml  python-test.yml
ast/: README.md  ast.cpp  ast2.cpp  error-missing-field.tmpl  field-basic.tmpl  field-optional-vector.tmpl  field-optional.tmpl  field-vector.tmpl  foo.json  generate-and-replace-dir.py  generate.py  get-builtin-include-dirs.py  initializer-basic.tmpl  initializer-optional-vector.tmpl  initializer-optional.tmpl  initializer-vector.tmpl  main.py  replace-in-file.py  replace-in-file.sh  requirements.txt  struct-implementation.tmpl  struct-template.tmpl  test.cpp  walker.py
ast/lib/: __init__.py  build.py  comment_commands.py  format.py  generate.py  helpers.py  jinja_env.py  member.py  replace.py  struct.py  walker.py
ast/lib/templates/: field-optional.tmpl  field-vector.tmpl
ast/lib/tests/: test_build_structs.py
ast/lib/tests/resources/: const.hpp  vector.hpp
ast/templates/: field-basic.tmpl
example/: CMakeLists.txt  main.cpp
include/eventsub/: chrono.hpp  listener.hpp  session.hpp
include/eventsub/messages/: metadata.hpp
include/eventsub/payloads/: channel-ban-v1.hpp  channel-chat-message-beta.hpp  channel-chat-message-v1.hpp  channel-chat-notification-beta.hpp  channel-chat-notification-v1.hpp  channel-update-v1.hpp  session-welcome.hpp  stream-offline-v1.hpp  stream-online-v1.hpp  subscription.hpp
src/: CMakeLists.txt  chrono.cpp  listener.hpp  main.cpp  session.cpp
src/messages/: errors.hpp  metadata.cpp  metadata.hpp  session-welcome.hpp
src/payloads/: README.md  channel-ban-v1.cpp  channel-ban-v1.hpp  channel-chat-message-beta.cpp  channel-chat-message-v1.cpp  channel-chat-notification-beta.cpp  channel-chat-notification-v1.cpp  channel-update-v1.cpp  channel-update-v1.hpp  new-payload.sh  session-welcome.cpp  session-welcome.hpp  stream-offline-v1.cpp  stream-offline-v1.hpp  stream-online-v1.cpp  stream-online-v1.hpp  subscription.cpp  subscription.hpp
